tests/dbg_cases/imports/errors/dbg_import_error_collision/math1.csm
// Math module - version 1
i32 add(i32 a, i32 b) {
    return a + b;
}
